src/test/deca/syntax/valid/synt/includeMath.deca
#include "Math.decah"

{
println("hello im include");
}
