src/test/deca/syntax/invalid/synt/circularInclude.deca
#include "circularInclude2.deca"

{
println("hello 1");
}
